ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/SkippedTokens/parserSkippedTokens9/input.ts.stderr
error: Expected unicode escape
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/SkippedTokens/parserSkippedTokens9/input.ts:2:9
  |
2 | /*foo*/ \ /*bar*/
  |         ^

